# escape-bytes

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz.rs  roundtrip.rs
src/: escape.rs  lib.rs  unescape.rs
src/test/: escape.rs  unescape.rs
